--- a/main.ipynb
+++ b/main.ipynb
@@ -1794,7 +1794,6 @@
     "# Standardize columns' names and change index\n",
     "df.columns = df.columns.str.lower()\n",
     "df.columns = df.columns.str.replace(' ', '_').str.replace('&', 'and')\n",
-    "df = df.drop(df.loc[df.name.duplicated()].index, axis=0) # drop duplicates\n",
     "if df.id.is_unique:\n",
     "    df = df.set_index('id')\n",
     "df.head()"
@@ -2864,7 +2863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2983,7 +2982,8 @@
     "        X_train, X_test = encode_data(X_train, X_test, encoders, cols_to_encode)\n",
     "    predictions = apply_model(X_train, X_test, y_train, model, return_formula)\n",
     "\n",
-    "    return (r2_score(y_test, predictions),\n",
+    "    return (predictions,\n",
+    "           r2_score(y_test, predictions),\n",
     "           mean_absolute_error(y_test, predictions),\n",
     "           mean_squared_error(y_test, predictions, squared=False))\n",
     "\n",
@@ -3031,7 +3031,7 @@
     "# their high number of distinct values \n",
     "# No multicollinearity problem is addressed\n",
     "# Some sort of raw dataset benchmark\n",
-    "r2, mae, mse = score_method(df=df,\n",
+    "pred, r2, mae, mse = score_method(df=df,\n",
     "                            target='ova', \n",
     "                            scaler=StandardScaler(),\n",
     "                            encoders=[OrdinalEncoder(handle_unknown='use_encoded_value', unknown_value=-1),\n",
@@ -3288,7 +3288,7 @@
     "# Let's make a first prediction not accounting for multicollinearity\n",
     "data = df[player_data+['ova']]\n",
     "display(data.head())\n",
-    "r2, mae, mse = score_method(df=data,\n",
+    "pred, r2, mae, mse = score_method(df=data,\n",
     "                            target='ova', \n",
     "                            scaler=StandardScaler(), \n",
     "                            encoders=[OrdinalEncoder(handle_unknown='use_encoded_value', unknown_value=-1),\n",
@@ -3304,7 +3304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -3334,7 +3334,6 @@
        "      <th>bp</th>\n",
        "      <th>weight</th>\n",
        "      <th>foot</th>\n",
-       "      <th>value</th>\n",
        "      <th>contract_start</th>\n",
        "      <th>contract_end</th>\n",
        "      <th>ova</th>\n",
@@ -3349,7 +3348,6 @@
        "      <td>LWB</td>\n",
        "      <td>82.100152</td>\n",
        "      <td>Left</td>\n",
-       "      <td>625000.0</td>\n",
        "      <td>2008.0</td>\n",
        "      <td>2016.0</td>\n",
        "      <td>69</td>\n",
@@ -3362,7 +3360,6 @@
        "      <td>CM</td>\n",
        "      <td>64.863656</td>\n",
        "      <td>Right</td>\n",
-       "      <td>600000.0</td>\n",
        "      <td>2014.0</td>\n",
        "      <td>2019.0</td>\n",
        "      <td>71</td>\n",
@@ -3375,7 +3372,6 @@
        "      <td>CAM</td>\n",
        "      <td>73.028312</td>\n",
        "      <td>Right</td>\n",
-       "      <td>1100000.0</td>\n",
        "      <td>2016.0</td>\n",
        "      <td>2020.0</td>\n",
        "      <td>71</td>\n",
@@ -3388,7 +3384,6 @@
        "      <td>CAM</td>\n",
        "      <td>68.038800</td>\n",
        "      <td>Right</td>\n",
-       "      <td>5500000.0</td>\n",
        "      <td>2018.0</td>\n",
        "      <td>2021.0</td>\n",
        "      <td>81</td>\n",
@@ -3401,7 +3396,6 @@
        "      <td>RW</td>\n",
        "      <td>73.935496</td>\n",
        "      <td>Right</td>\n",
-       "      <td>725000.0</td>\n",
        "      <td>2011.0</td>\n",
        "      <td>2012.0</td>\n",
        "      <td>66</td>\n",
@@ -3411,19 +3405,19 @@
        "</div>"
       ],
       "text/plain": [
-       "   age nationality              club   bp     weight   foot      value  \\\n",
-       "0   33       Italy           Udinese  LWB  82.100152   Left   625000.0   \n",
-       "1   37       Spain         KAS Eupen   CM  64.863656  Right   600000.0   \n",
-       "2   33     England     Coventry City  CAM  73.028312  Right  1100000.0   \n",
-       "3   36       Spain       Vissel Kobe  CAM  68.038800  Right  5500000.0   \n",
-       "4   27     Germany  Alemannia Aachen   RW  73.935496  Right   725000.0   \n",
+       "   age nationality              club   bp     weight   foot  contract_start  \\\n",
+       "0   33       Italy           Udinese  LWB  82.100152   Left          2008.0   \n",
+       "1   37       Spain         KAS Eupen   CM  64.863656  Right          2014.0   \n",
+       "2   33     England     Coventry City  CAM  73.028312  Right          2016.0   \n",
+       "3   36       Spain       Vissel Kobe  CAM  68.038800  Right          2018.0   \n",
+       "4   27     Germany  Alemannia Aachen   RW  73.935496  Right          2011.0   \n",
        "\n",
-       "   contract_start  contract_end  ova  \n",
-       "0          2008.0        2016.0   69  \n",
-       "1          2014.0        2019.0   71  \n",
-       "2          2016.0        2020.0   71  \n",
-       "3          2018.0        2021.0   81  \n",
-       "4          2011.0        2012.0   66  "
+       "   contract_end  ova  \n",
+       "0        2016.0   69  \n",
+       "1        2019.0   71  \n",
+       "2        2020.0   71  \n",
+       "3        2021.0   81  \n",
+       "4        2012.0   66  "
       ]
      },
      "metadata": {},
@@ -3433,9 +3427,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r2 = 0.7611\n",
-      "mae = 2.1501\n",
-      "mse = 2.7756\n"
+      "r2 = 0.396\n",
+      "mae = 4.0555\n",
+      "mse = 5.2068\n"
      ]
     }
    ],
@@ -3447,9 +3441,9 @@
     "# anyway, dropping the multicollinear feature does not improve the results. \n",
     "# probably due to the low number of features\n",
     "data = df[player_data+['ova']]\n",
-    "data = data.drop(['release_clause', 'wage', 'height'], axis=1)\n",
+    "data = data.drop(['release_clause', 'wage', 'height', 'value'], axis=1)\n",
     "display(data.head())\n",
-    "r2, mae, mse = score_method(df=data,\n",
+    "pred, r2, mae, mse = score_method(df=data,\n",
     "                            target='ova', \n",
     "                            scaler=StandardScaler(),\n",
     "                            encoders=[OrdinalEncoder(handle_unknown='use_encoded_value', unknown_value=-1),\n",
@@ -3472,7 +3466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -4336,7 +4330,7 @@
     "\n",
     "data = df[list(player_stats)+['ova']]\n",
     "display(data.head())\n",
-    "r2, mae, mse = score_method(df=data,\n",
+    "pred, r2, mae, mse = score_method(df=data,\n",
     "                            target='ova', \n",
     "                            scaler=StandardScaler(),\n",
     "                            encoders = [OneHotEncoder(handle_unknown='ignore')],\n",
